fix issue with header bottom on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 .header {
-  padding: 10px;
+  padding-top:10px;
+  padding-bottom: 20px;
   height: 150px;
   border-bottom: 1px solid #ccc;
   margin-left: 25%;
